# ciphel

./: Cargo.toml  README.md
proc_macro_utils/: Cargo.toml
proc_macro_utils/src/: lib.rs  main.rs  test.rs
proc_macro_utils/tests/: shared_function.rs
src/: lib.rs
src/ast/: mod.rs  modules.rs  types.rs
src/ast/expressions/: locate.rs  mod.rs
src/ast/statements/: mod.rs  return_stat.rs
src/ast/types/: mod.rs  types_parse.rs  types_resolve.rs  types_typeof.rs
src/ast/utils/: error.rs  lexem.rs  mod.rs  numbers.rs  strings.rs  utils_macro.rs
src/parser/: mod.rs
src/parser/ast/: mod.rs  types.rs
src/parser/utils/: io.rs  lexem.rs  strings.rs
src/semantic/: mod.rs
src/semantic/scope/: chan_impl.rs  event_impl.rs  mod.rs  scope.rs  scope_impl.rs  scope_obsolete.rs  static_type_impl.rs  static_types.rs  type_traits.rs  user_type_impl.rs  user_types.rs  var_impl.rs
src/semantic/utils/: mod.rs  trait_impl.rs
src/vm/: error_handler.rs  mod.rs  program.rs  runtime.rs  scheduler.rs  scheduler_v2.rs  signal.rs  stdio.rs  vm.rs
src/vm/allocator/: heap.rs  mod.rs  stack.rs  vtable.rs
src/vm/asm/: alloc.rs  branch.rs  data.rs  locate.rs  math_operation.rs  mem.rs  mod.rs  operation.rs
src/vm/casm/: alloc.rs  branch.rs  data.rs  locate.rs  math_operation.rs  mem.rs  memcopy.rs  mod.rs  operation.rs  serialize.rs
src/vm/core/: alloc.rs  core_map.rs  core_string.rs  core_vector.rs  format.rs  io.rs  iter.rs  lexem.rs  map.rs  math.rs  mod.rs  string.rs  strings.rs  thread.rs  vector.rs
src/vm/platform/: mod.rs
src/vm/strips/: access.rs  alloc.rs  (+14 more)
(+92 files in other folders)
