[package]
name = "proc_macro_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/shared_function.rs"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1.0"
trybuild = "1.0.93"
num-traits = "0.2.19"
proc-macro2 = "1.0.81"
